--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -33,6 +33,7 @@
     align-items: center;
     justify-content: space-around;
     height: 10vh;
+    border-radius: 10px 10px 0 0;
   }
   nav ul {
     display: flex;
@@ -42,6 +43,10 @@
     list-style-type: none;
   }
   /* main */
+  envolve {
+  width: 1000px;
+  margin: 0 auto;
+  }
   main {
     background-color: aliceblue;
   }
@@ -60,6 +65,7 @@
   /* footer */
   footer {
     background-color: rgb(151, 179, 204);
+    border-radius: 0 0 10px 10px;
   }
   footer p {
     padding: 10px 0;
