--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -2,19 +2,21 @@
 <html lang="pt-br">
 <%- include('../partials/head'); %>
 <body class="container">
-  <%- include('../partials/header', {pagina: 'Sobre'}); %>
-  <!-- {pagina: 'sobre'} é um objeto -->
-  <!-- pagina é o nome do objeto -->
-  <!-- 'sobre' é um texto qualquer -->
-  <main>
-    <section>
-      <div class="main-home">
-        <h1>Sobre mim</h1>
-        <p>Oi sou a Sabrina, estudante de Ciência da Computação e aluna da Rocketseat.</p>
-      </div>
-    </section>
-  </main>
-  <%- include('../partials/footer'); %>
+  <section class="envolve">
+    <%- include('../partials/header', {pagina: 'Sobre'}); %>
+    <!-- {pagina: 'sobre'} é um objeto -->
+    <!-- pagina é o nome do objeto -->
+    <!-- 'sobre' é um texto qualquer -->
+    <main>
+      <section>
+        <div class="main-home">
+          <h1>Sobre mim</h1>
+          <p>Oi sou a Sabrina, estudante de Ciência da Computação e aluna da Rocketseat.</p>
+        </div>
+      </section>
+    </main>
+    <%- include('../partials/footer'); %>
+  </section>
 </body>
 </html>
 <!-- Pra abrir no navegador http://localhost:8080/sobre -->
