--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,6 +13,12 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
   }
+  body {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   a {
     text-decoration: none;
     color: white;
@@ -43,12 +49,13 @@
     list-style-type: none;
   }
   /* main */
-  envolve {
+  .envolve {
   width: 1000px;
   margin: 0 auto;
   }
   main {
     background-color: aliceblue;
+    margin: auto;
   }
   section {
     margin: 0 5%;
